--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         }
         .button-group {
             display: flex;
-            gap: 5px; /* Reduced space between buttons */
+            gap: 5px;
             justify-content: center;
         }
-        #result {
+        #result, #pointsTarget {
             margin-top: 20px;
             font-size: 18px;
             color: #333;
@@ -73,6 +73,7 @@
 </head>
 <body>
     <h1>WW Diary</h1>
+    <div id="pointsTarget"></div>
     <form id="pointsForm">
         <label for="caloriesInput">Calories:</label>
         <input type="number" id="caloriesInput" min="0" required>
@@ -104,7 +105,6 @@
                 return;
             }
 
-            // Simplified points formula (e.g., Weight Watchers-inspired)
             const points = Math.round((calories / 50) + (fat / 12) - (Math.min(fiber, 4) / 5));
             document.getElementById('result').innerText = `Points: ${points >= 0 ? points : 0}`;
         }
@@ -113,6 +113,15 @@
             document.getElementById('pointsForm').reset();
             document.getElementById('result').innerText = '';
         }
+
+        function displayPointsTarget() {
+            const target = localStorage.getItem('pointsTarget');
+            const pointsTargetDiv = document.getElementById('pointsTarget');
+            pointsTargetDiv.innerText = target ? `Daily Points Target: ${target}` : 'No Points Target Set';
+        }
+
+        // Load Points Target on page load
+        window.onload = displayPointsTarget;
     </script>
 </body>
 </html>
