--- a/log.html
+++ b/log.html
@@ -76,7 +76,7 @@
         footer a.linkBtn:hover {
             background-color: #218838;
         }
-        #pointsTarget {
+        #pointsTarget, #remainingPoints {
             margin-top: 20px;
             font-size: 18px;
             color: #333;
@@ -86,6 +86,7 @@
 <body>
     <h1>Daily Points Journal</h1>
     <div id="pointsTarget"></div>
+    <div id="remainingPoints"></div>
     <form id="targetForm">
         <label for="targetInput">Daily Points Target:</label>
         <input type="number" id="targetInput" min="0" required>
@@ -138,6 +139,16 @@
             const target = localStorage.getItem('pointsTarget');
             const pointsTargetDiv = document.getElementById('pointsTarget');
             pointsTargetDiv.innerText = target ? `Daily Points Target: ${target}` : 'No Points Target Set';
+            displayRemainingPoints();
+        }
+
+        function displayRemainingPoints() {
+            const target = parseFloat(localStorage.getItem('pointsTarget') || '0');
+            const logs = JSON.parse(localStorage.getItem('foodLogs') || '[]');
+            const totalPoints = logs.reduce((sum, log) => sum + parseFloat(log.points), 0);
+            const remaining = target - totalPoints;
+            const remainingPointsDiv = document.getElementById('remainingPoints');
+            remainingPointsDiv.innerText = target ? `Remaining Points: ${remaining >= 0 ? remaining.toFixed(1) : 0}` : '';
         }
 
         function saveLog() {
@@ -154,6 +165,7 @@
                 localStorage.setItem('foodLogs', JSON.stringify(logs));
                 
                 document.getElementById('logForm').reset();
+                displayRemainingPoints();
             } else {
                 alert('Please enter valid points and food description.');
             }
@@ -168,6 +180,8 @@
             const logs = JSON.parse(localStorage.getItem('foodLogs') || '[]');
             logs.splice(index, 1);
             localStorage.setItem('foodLogs', JSON.stringify(logs));
+            
+            displayRemainingPoints();
         }
 
         function loadLogs() {
@@ -193,7 +207,7 @@
             displayPointsTarget();
         }
 
-        // Load Points Target and logs on page load
+        // Load Points Target, logs, and remaining points on page load
         window.onload = function() {
             displayPointsTarget();
             loadLogs();
