--- a/log.html
+++ b/log.html
@@ -81,6 +81,9 @@
             font-size: 18px;
             color: #333;
         }
+        footer {
+            margin-top: 30px; /* Increased spacing to lower buttons */
+        }
     </style>
 </head>
 <body>
