--- a/log.html
+++ b/log.html
@@ -82,7 +82,7 @@
             color: #333;
         }
         footer {
-            margin-top: 30px; /* Increased spacing to lower buttons */
+            margin-top: 30px;
         }
     </style>
 </head>
@@ -104,7 +104,6 @@
         <input type="text" id="foodInput" required>
         <div class="button-group">
             <button type="button" onclick="saveLog()">Save</button>
-            <button type="button" onclick="goHome()">Home</button>
         </div>
     </form>
     <table id="logTable">
