--- a/weight.html
+++ b/weight.html
@@ -33,7 +33,7 @@
             line-height: 1.5;
             box-sizing: border-box;
             cursor: pointer;
-            background-color: #007bff;
+            background-color: #28a745; /* Green to match footer buttons */
             color: white;
             border: none;
             border-radius: 5px;
@@ -41,7 +41,7 @@
             display: inline-block;
         }
         button:hover, a.linkBtn:hover {
-            background-color: #0056b3;
+            background-color: #218838;
         }
         .button-group {
             display: flex;
@@ -62,19 +62,8 @@
             background-color: #f2f2f2;
             font-weight: bold;
         }
-        nav a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: #007bff;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        footer a.linkBtn {
-            background-color: #28a745;
-        }
-        footer a.linkBtn:hover {
-            background-color: #218838;
+        footer {
+            margin-top: 30px; /* Match log.html footer spacing */
         }
         #pointsTarget {
             margin-top: 20px;
@@ -105,13 +94,10 @@
         </thead>
         <tbody></tbody>
     </table>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="log.html">Points Journal</a>
-    </nav>
     <footer>
         <div class="button-group">
             <a href="index.html" class="linkBtn">Home</a>
+            <a href="log.html" class="linkBtn">Points Journal</a>
         </div>
     </footer>
     <script>
