--- a/weight.html
+++ b/weight.html
@@ -2,36 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Weight Tracker</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
+            margin: 0 auto 4rem;
+            padding: 1.5rem;
             text-align: center;
+            color: #222;
         }
         h1 {
-            color: #333;
+            color: #222;
+            font-size: 1.8rem;
         }
         form {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 0.75rem;
+            background-color: #f5f5f5;
+            padding: 1rem;
+            border-radius: 5px;
         }
         label {
             font-weight: bold;
+            font-size: 1.1rem;
         }
         input[type="date"], input[type="number"] {
-            padding: 8px;
-            font-size: 16px;
+            padding: 10px;
+            font-size: 1.1rem;
+            border: 1px solid #ddd;
+            border-radius: 5px;
         }
         button {
-            padding: 10px;
-            font-size: 16px;
-            line-height: 1.5;
-            box-sizing: border-box;
+            padding: 12px;
+            min-height: 44px;
+            font-size: 1.1rem;
             cursor: pointer;
             background-color: #007bff;
             color: white;
@@ -43,41 +50,51 @@
         }
         .button-group {
             display: flex;
-            gap: 5px;
+            gap: 0.5rem;
             justify-content: center;
+        }
+        .table-wrapper {
+            overflow-x: auto;
+            margin-top: 1rem;
         }
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
         }
         th, td {
             border: 1px solid #ddd;
             padding: 8px;
             text-align: left;
+            font-size: 1rem;
         }
         th {
             background-color: #f2f2f2;
             font-weight: bold;
         }
         nav {
-            margin-top: 20px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: #f8f8f8;
+            padding: 0.75rem;
+            box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
         }
         nav a {
-            margin: 0 10px;
             text-decoration: none;
             color: #007bff;
+            font-size: 1.1rem;
         }
         nav a:hover {
             text-decoration: underline;
         }
-        footer {
-            margin-top: 30px;
-        }
         #pointsTarget {
-            margin-top: 20px;
-            font-size: 18px;
-            color: #333;
+            margin-top: 1rem;
+            font-size: 1.1rem;
+            color: #222;
         }
     </style>
 </head>
@@ -93,17 +110,18 @@
             <button type="button" onclick="saveWeight()">Save Weight</button>
         </div>
     </form>
-    <table id="weightTable">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Weight (lbs)</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-    <footer></footer>
+    <div class="table-wrapper">
+        <table id="weightTable">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Weight (lbs)</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
     <nav>
         <a href="index.html">Home</a>
         <a href="log.html">Points Journal</a>
@@ -155,7 +173,6 @@
             });
         }
 
-        // Load Points Target and weights on page load
         window.onload = function() {
             displayPointsTarget();
             loadWeights();
