--- a/log.html
+++ b/log.html
@@ -6,16 +6,25 @@
     <title>Daily Points Journal</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', 'Helvetica', Arial, sans-serif;
             max-width: 600px;
             margin: 0 auto 4rem;
             padding: 1.5rem;
             text-align: center;
             color: #222;
         }
+        header {
+            background-color: #e8f0fe;
+            padding: 1rem;
+            border-radius: 5px;
+            margin-bottom: 1rem;
+        }
         h1 {
             color: #222;
-            font-size: 1.8rem;
+            font-size: 2rem;
+            font-weight: 700;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+            margin: 0;
         }
         form {
             display: flex;
@@ -102,7 +111,9 @@
     </style>
 </head>
 <body>
-    <h1>Daily Points Journal</h1>
+    <header>
+        <h1>Daily Points Journal</h1>
+    </header>
     <div id="pointsTarget"></div>
     <div id="remainingPoints"></div>
     <form id="targetForm">
