--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
             text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
             margin: 0;
         }
+        .points-info {
+            background-color: #f0f4f8;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 1rem;
+            margin: 1rem 0;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        #pointsTarget, #remainingPoints {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #1a1a1a;
+            margin: 0.5rem 0;
+        }
         form {
             display: flex;
             flex-direction: column;
@@ -62,7 +76,7 @@
             gap: 0.5rem;
             justify-content: center;
         }
-        #result, #pointsTarget, #remainingPoints {
+        #result {
             margin-top: 1rem;
             font-size: 1.1rem;
             color: #222;
@@ -93,8 +107,10 @@
     <header>
         <h1>WW Diary</h1>
     </header>
-    <div id="pointsTarget"></div>
-    <div id="remainingPoints"></div>
+    <section class="points-info">
+        <div id="pointsTarget"></div>
+        <div id="remainingPoints"></div>
+    </section>
     <form id="pointsForm">
         <label for="caloriesInput">Calories:</label>
         <input type="number" id="caloriesInput" min="0" required>
