--- a/log.html
+++ b/log.html
@@ -26,6 +26,20 @@
             text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
             margin: 0;
         }
+        .points-info {
+            background-color: #f0f4f8;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 1rem;
+            margin: 1rem 0;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        #pointsTarget, #remainingPoints {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #1a1a1a;
+            margin: 0.5rem 0;
+        }
         form {
             display: flex;
             flex-direction: column;
@@ -103,19 +117,16 @@
         footer {
             margin-top: 1.5rem;
         }
-        #pointsTarget, #remainingPoints {
-            margin-top: 1rem;
-            font-size: 1.1rem;
-            color: #222;
-        }
     </style>
 </head>
 <body>
     <header>
         <h1>Daily Points Journal</h1>
     </header>
-    <div id="pointsTarget"></div>
-    <div id="remainingPoints"></div>
+    <section class="points-info">
+        <div id="pointsTarget"></div>
+        <div id="remainingPoints"></div>
+    </section>
     <form id="targetForm">
         <label for="targetInput">Daily Points Target:</label>
         <input type="number" id="targetInput" min="0" required>
