--- a/weight.html
+++ b/weight.html
@@ -26,6 +26,20 @@
             text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
             margin: 0;
         }
+        .points-info {
+            background-color: #f0f4f8;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 1rem;
+            margin: 1rem 0;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        #pointsTarget {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #1a1a1a;
+            margin: 0.5rem 0;
+        }
         form {
             display: flex;
             flex-direction: column;
@@ -100,18 +114,15 @@
         nav a:hover {
             text-decoration: underline;
         }
-        #pointsTarget {
-            margin-top: 1rem;
-            font-size: 1.1rem;
-            color: #222;
-        }
     </style>
 </head>
 <body>
     <header>
         <h1>Weight Tracker</h1>
     </header>
-    <div id="pointsTarget"></div>
+    <section class="points-info">
+        <div id="pointsTarget"></div>
+    </section>
     <form id="weightForm">
         <label for="dateInput">Date:</label>
         <input type="date" id="dateInput" required>
