--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     <nav>
         <a href="log.html">Points Journal</a>
         <a href="weight.html">Weight Tracker</a>
+        <a href="target.html">Set Target</a>
     </nav>
     <script>
         function calculatePoints() {
