--- a/log.html
+++ b/log.html
@@ -127,13 +127,6 @@
         <div id="pointsTarget"></div>
         <div id="remainingPoints"></div>
     </section>
-    <form id="targetForm">
-        <label for="targetInput">Daily Points Target:</label>
-        <input type="number" id="targetInput" min="0" required>
-        <div class="button-group">
-            <button type="button" onclick="setTarget()">Set Target</button>
-        </div>
-    </form>
     <form id="logForm">
         <label for="pointsInput">Points:</label>
         <input type="number" id="pointsInput" min="0" step="0.1" required>
@@ -163,18 +156,9 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="weight.html">Weight Tracker</a>
+        <a href="target.html">Set Target</a>
     </nav>
     <script>
-        function setTarget() {
-            const target = document.getElementById('targetInput').value;
-            if (target && !isNaN(target) && target >= 0) {
-                localStorage.setItem('pointsTarget', target);
-                displayPointsTarget();
-            } else {
-                alert('Please enter a valid number.');
-            }
-        }
-
         function displayPointsTarget() {
             const target = localStorage.getItem('pointsTarget');
             const pointsTargetDiv = document.getElementById('pointsTarget');
