--- a/weight.html
+++ b/weight.html
@@ -147,6 +147,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="log.html">Points Journal</a>
+        <a href="target.html">Set Target</a>
     </nav>
     <script>
         function displayPointsTarget() {
